fixed the icons not showing up

--- a/style.css
+++ b/style.css
@@ -128,7 +128,6 @@ body {
 
     i {
         cursor: pointer;
-        margin-left: 15px;
         transition: color 0.3s linear;
     }
 
